# 5assigment

./: CMakeLists.txt  Memory.h  Node.h  Piece.h  README.md  Splitter.cpp  Splitter.h  TreeBuilder.cpp  TreeBuilder.h  main.cpp
test/: test.py
